src/App.css
html,
body {
  height: 100%;
  background-color: black;
}
a {
  text-decoration: none;
  color: inherit;
  transition: background-color 0.3s ease;
}

a:hover {
  background-color: rgb(50, 50, 50);
  /* color: white; */
  border-radius: 3px;
  padding: 1px 1px; /* Optional: add padding for better appearance */
}

#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

